# BSDirectory

./: Dockerfile
source/: CMakeLists.txt
source/src/: logindialog.cpp  logindialog.h  logindialog.ui  main.cpp
